UI: Change CenterToScreen shortcut to ctrl+d

--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -891,7 +891,7 @@
     <string>Basic.MainMenu.Edit.Transform.CenterToScreen</string>
    </property>
    <property name="shortcut">
-    <string>Ctrl+C</string>
+    <string>Ctrl+D</string>
    </property>
   </action>
   <action name="actionFlipHorizontal">
