--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -667,6 +667,16 @@
                   </property>
                  </widget>
                 </item>
+                <item row="5" column="0">
+                 <widget class="QLabel" name="label_420">
+                  <property name="text">
+                   <string>Basic.Settings.Output.CustomMuxerSettings</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="5" column="1">
+                 <widget class="QLineEdit" name="simpleOutMuxCustom"/>
+                </item>
                </layout>
               </widget>
              </item>
@@ -1231,6 +1241,16 @@
                               </item>
                              </layout>
                             </widget>
+                           </item>
+                           <item row="6" column="0">
+                            <widget class="QLabel" name="label_9001">
+                             <property name="text">
+                              <string>Basic.Settings.Output.CustomMuxerSettings</string>
+                             </property>
+                            </widget>
+                           </item>
+                           <item row="6" column="1">
+                            <widget class="QLineEdit" name="advOutMuxCustom"/>
                            </item>
                           </layout>
                          </widget>
