UI: Add HLS entries for ffmpeg-mux output

--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -638,6 +638,11 @@
                     <string notr="true">ts</string>
                    </property>
                   </item>
+                  <item>
+                   <property name="text">
+                    <string notr="true">m3u8</string>
+                   </property>
+                  </item>
                  </widget>
                 </item>
                 <item row="3" column="0">
@@ -1125,6 +1130,11 @@
                              <item>
                               <property name="text">
                                <string notr="true">ts</string>
+                              </property>
+                             </item>
+                             <item>
+                              <property name="text">
+                               <string notr="true">m3u8</string>
                               </property>
                              </item>
                             </widget>
