--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -2824,6 +2824,20 @@
                      </property>
                     </widget>
                    </item>
+                   <item row="5" column="1">
+                    <widget class="QCheckBox" name="disableOSXVSync">
+                     <property name="text">
+                      <string>DisableOSXVSync</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="6" column="1">
+                    <widget class="QCheckBox" name="resetOSXVSync">
+                     <property name="text">
+                      <string>ResetOSXVSyncOnExit</string>
+                     </property>
+                    </widget>
+                   </item>
                   </layout>
                  </widget>
                 </item>
