UI: Fix Delete shortcut for scenes/sources listboxes
When the new UI was put in, the action shortcuts were unintentionally
removed from the list boxes.

--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -334,7 +334,8 @@
                </property>
                <property name="defaultDropAction">
                 <enum>Qt::TargetMoveAction</enum>
-               </property>
+	       </property>
+               <addaction name="actionRemoveScene"/>
               </widget>
              </item>
              <item>
@@ -520,7 +521,8 @@
                </property>
                <property name="selectionMode">
                 <enum>QAbstractItemView::ExtendedSelection</enum>
-               </property>
+	       </property>
+               <addaction name="actionRemoveSource"/>
               </widget>
              </item>
              <item>
