--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -334,7 +334,7 @@
                </property>
                <property name="defaultDropAction">
                 <enum>Qt::TargetMoveAction</enum>
-	       </property>
+               </property>
                <addaction name="actionRemoveScene"/>
               </widget>
              </item>
@@ -415,6 +415,9 @@
               <width>22</width>
               <height>22</height>
              </size>
+            </property>
+            <property name="accessibleName">
+             <string>Basic.AdvAudio</string>
             </property>
             <property name="text">
              <string notr="true"/>
@@ -521,7 +524,7 @@
                </property>
                <property name="selectionMode">
                 <enum>QAbstractItemView::ExtendedSelection</enum>
-	       </property>
+               </property>
                <addaction name="actionRemoveSource"/>
               </widget>
              </item>
