UI: Add file formatting options for recording
Allows the user to specify custom formatting for their recording file
names with many formatting options, viewed via tooltip.  The options
have been added to the advanced settings section.

Closes jp9000/obs-studio#507

--- a/obs/forms/OBSBasicSettings.ui
+++ b/obs/forms/OBSBasicSettings.ui
@@ -2954,6 +2954,32 @@
                  </widget>
                 </item>
                 <item>
+                 <widget class="QGroupBox" name="groupBox_6">
+                  <property name="title">
+                   <string>Basic.Settings.Output.Adv.Recording</string>
+                  </property>
+                  <layout class="QFormLayout" name="formLayout_17">
+                   <item row="0" column="0">
+                    <widget class="QLabel" name="label_7">
+                     <property name="text">
+                      <string>Basic.Settings.Output.Adv.Recording.Filename</string>
+                     </property>
+                    </widget>
+                   </item>
+                   <item row="0" column="1">
+                    <widget class="QLineEdit" name="filenameFormatting"/>
+                   </item>
+                   <item row="1" column="1">
+                    <widget class="QCheckBox" name="overwriteIfExists">
+                     <property name="text">
+                      <string>Basic.Settings.Output.Adv.Recording.OverwriteIfExists</string>
+                     </property>
+                    </widget>
+                   </item>
+                  </layout>
+                 </widget>
+                </item>
+                <item>
                  <widget class="QGroupBox" name="groupBox_5">
                   <property name="title">
                    <string>Basic.Settings.Advanced.StreamDelay</string>
